--- a/index.html
+++ b/index.html
@@ -42,11 +42,22 @@
 
 <body>
 	<!-- Preloader -->
-<!--	<div id="tt-preloader">
+	<!--<div id="tt-preloader">
 		<div id="pre-status">
 			<div class="preload-placeholder"></div>
 		</div>
 	</div> -->
+	
+	<div id="loading">
+            <div id="loading-center">
+                <div id="loading-center-absolute">
+                    <div class="object" id="object_one"></div>
+                    <div class="object" id="object_two"></div>
+                    <div class="object" id="object_three"></div>
+                    <div class="object" id="object_four"></div>
+                </div>
+            </div>
+        </div>
 
 	<!-- Home Section -->
 	<section id="home" class="tt-fullHeight" data-stellar-vertical-offset="50" data-stellar-background-ratio="0.2">
