--- a/sub1_bros.html
+++ b/sub1_bros.html
@@ -41,12 +41,13 @@
 </head>
 
 <body>
-    <!-- Preloader -->
-<!--    <div id="tt-preloader">
-        <div id="pre-status">
-            <div class="preload-placeholder"></div>
+	<div id="loading">
+            <div id="loading-center">
+                <div id="loading-center-absolute">
+                    <div class="object" id="object_one"></div>
+                </div>
+            </div>
         </div>
-    </div> -->
 
     <!-- Home Section -->
     <section id="broshome" class="tt-fullHeight" data-stellar-vertical-offset="50" data-stellar-background-ratio="0.2">
