--- a/sub1_bros.html
+++ b/sub1_bros.html
@@ -62,10 +62,10 @@
         <div class="container">
             <div class="video_rain">
 
-                 <video src="video/juicymainvideo.mp4" controls autoplay loop muted poster="sub2rain/videothumb.jpg" class="v_rain">이 브라우저는 지원하지 않는 동영상입니다.</video>
+                 <video src="video/juicy.mp4" controls autoplay loop muted poster="sub1bros/sub1play.png" class="v_rain">이 브라우저는 지원하지 않는 동영상입니다.</video>
 
                 <img src="sub2rain/sub2frame.png" alt="주시브로스영상" class="v_rain_frame">
-                <a href="http://jiyij.dothome.co.kr" class="btn btn-primary btn-lg rainbtn">go to the web site</a>
+                <a href="https://yangzieun.github.io/project1/" class="btn btn-primary btn-lg rainbtn">go to the web site</a>
                 <a href="index.html #workss" class="btn btn-primary btn-lg rainbtn">back to the porfolio</a>
             </div>
         </div>
