--- a/sub1_bros.html
+++ b/sub1_bros.html
@@ -41,6 +41,8 @@
 </head>
 
 <body>
+
+
 	<div id="loading">
             <div id="loading-center">
                 <div id="loading-center-absolute">
@@ -66,7 +68,7 @@
 
                 <img src="sub2rain/sub2frame.png" alt="주시브로스영상" class="v_rain_frame">
                 <a href="https://yangzieun.github.io/project1/" class="btn btn-primary btn-lg rainbtn">go to the web site</a>
-                <a href="index.html #workss" class="btn btn-primary btn-lg rainbtn">back to the porfolio</a>
+                <a href="https://yangzieun.github.io/test/ #workss" class="btn btn-primary btn-lg rainbtn">back to the porfolio</a>
             </div>
         </div>
     </section>
