--- a/sub2_rain.html
+++ b/sub2_rain.html
@@ -68,7 +68,7 @@
 
                 <img src="sub2rain/sub2frame.png" alt="주시브로스영상" class="v_rain_frame">
                 <a href="http://jiyii.dothome.co.kr/" class="btn btn-primary btn-lg rainbtn">go to the web site</a>
-                <a href="index.html #workss" class="btn btn-primary btn-lg rainbtn">back to the porfolio</a>
+                <a href="http://yangzieun.github.io/test/#workss" class="btn btn-primary btn-lg rainbtn">back to the porfolio</a>
             </div>
         </div>
     </section>
